[project]
name = "llm-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb==0.5.23",
    "datetime>=5.5",
    "langchain>=0.3.19",
    "langchain-anthropic>=0.3.8",
    "langchain-community>=0.3.18",
    "langchain-google-genai>=2.0.11",
    "langchain-openai>=0.3.7",
    "pathlib>=1.0.1",
    "streamlit==1.42.2",
    "uuid>=1.30",
]
